Enhance mobile responsiveness and interactivity
Refactor HTML structure, styles, and JavaScript logic for improved mobile compatibility and user interaction.

--- a/index.html
+++ b/index.html
@@ -11,100 +11,76 @@
 <style>
 body {
   background: linear-gradient(to bottom, #ffd6e8, #fff);
-  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
+/* Animations */
 .bounce { animation: bounce 1.5s infinite; }
 @keyframes bounce { 0%,100%{transform:translateY(0);} 50%{transform:translateY(-15px);} }
-
-.float { animation: float 3s ease-in-out infinite; }
-@keyframes float {0%{transform:translateY(0);}50%{transform:translateY(-20px);}100%{transform:translateY(0);} }
 
 .fadeIn { animation: fadeIn 1s ease forwards; }
 @keyframes fadeIn {from{opacity:0;transform:scale(.8);}to{opacity:1;transform:scale(1);}}
 
-/* romantic background */
-.romantic-bg {
-  background: linear-gradient(135deg,#ffc0cb,#ffe4ec);
-  background-size: cover;
-}
-
 .option-btn {
   transition: all 0.3s ease;
+  pointer-events: auto;
 }
 
-.option-btn:hover {
-  scale: 1.05;
-}
+.option-btn:hover { scale:1.05; }
+
+.clickable { pointer-events:auto; z-index:50; }
 </style>
 </head>
 
-<body class="flex items-center justify-center h-screen">
+<body class="w-full flex flex-col items-center px-4">
 
 <!-- PAGE 1 -->
-<div id="page1" class="text-center">
+<div id="page1" class="text-center w-full max-w-md mt-8">
+  <img id="mainImage" src="https://i.imgur.com/UPSKZF7.gif" class="w-72 mx-auto rounded-xl shadow-lg clickable"/>
+  <h1 id="question" class="text-4xl font-bold text-pink-600 mt-6">
+    Will you be my Valentine? ❤️
+  </h1>
 
-<img id="mainImage" src="https://i.imgur.com/UPSKZF7.gif"
-class="w-72 mx-auto rounded-xl shadow-lg"/>
-
-<h1 id="question" class="text-4xl font-bold text-pink-600 mt-6">
-Will you be my Valentine? ❤️
-</h1>
-
-<div class="mt-6 flex justify-center gap-5">
-<button id="yesBtn" class="bg-green-500 text-white px-6 py-3 rounded-xl text-xl bounce">Yes 💖</button>
-<button id="noBtn" class="bg-red-500 text-white px-6 py-3 rounded-xl text-xl">No 💔</button>
+  <div class="mt-6 flex flex-col sm:flex-row justify-center gap-4">
+    <button id="yesBtn" class="bg-green-500 text-white px-6 py-3 rounded-xl text-xl bounce clickable">Yes 💖</button>
+    <button id="noBtn" class="bg-red-500 text-white px-6 py-3 rounded-xl text-xl clickable">No 💔</button>
+  </div>
 </div>
 
-</div>
-
-<!-- PAGE 2 LETTER OPENING -->
-<div id="page2" class="hidden flex flex-col items-center relative">
-
-<img id="letterClosed"
-src="https://i.imgur.com/tlyiRvP.jpeg"
-class="w-60 cursor-pointer float drop-shadow-xl z-10" />
-
-<img id="letterOpen"
-src="https://i.imgur.com/ZaazxR0.jpeg"
-class="w-60 hidden drop-shadow-xl z-10" />
-
-<p id="loveNote"
-class="absolute top-32 text-center text-pink-700 text-xl max-w-md opacity-0 transition-all duration-1000 translate-y-20 font-semibold">
-Thank you for being in my life ❤️
-</p>
-
-<button id="afterLetter"
-class="hidden mt-48 bg-pink-500 text-white px-6 py-3 rounded-xl text-xl bounce">
-Next ➝
-</button>
-
-<p class="text-pink-600 mt-4 text-lg">Click the letter 💌</p>
-
+<!-- PAGE 2 -->
+<div id="page2" class="hidden flex flex-col items-center w-full max-w-md mt-8">
+  <img id="letterClosed" src="https://i.imgur.com/tlyiRvP.jpeg" class="w-60 cursor-pointer clickable"/>
+  <img id="letterOpen" src="https://i.imgur.com/ZaazxR0.jpeg" class="w-60 hidden clickable mt-4"/>
+  <p id="loveNote" class="text-center text-pink-700 text-xl max-w-md font-semibold mt-4 hidden">
+    Thank you for being in my life ❤️
+  </p>
+  <button id="afterLetter" class="hidden mt-4 bg-pink-500 text-white px-6 py-3 rounded-xl text-xl bounce clickable">Next ➝</button>
+  <p class="text-pink-600 mt-2 text-lg clickable">Click the letter 💌</p>
 </div>
 
 <!-- PAGE 3 MESSAGE -->
-<div id="page3" class="hidden flex flex-col items-center text-center romantic-bg p-10 rounded-xl">
-
-<p class="text-2xl text-pink-700 font-semibold max-w-xl fadeIn mb-6">
-From the moment you came into my life, everything became brighter, happier and more beautiful.<br>
-You are my smile, my peace and my biggest happiness.<br>
-Thank you for being mine. I love you endlessly ❤️
-</p>
-
-<button id="toQuiz" class="bg-pink-500 text-white px-6 py-3 rounded-xl text-xl bounce">Next ➝</button>
+<div id="page3" class="hidden flex flex-col items-center text-center w-full max-w-md mt-8">
+  <p class="text-2xl text-pink-700 font-semibold fadeIn mb-6">
+    From the moment you came into my life, everything became brighter, happier and more beautiful.<br>
+    You are my smile, my peace and my biggest happiness.<br>
+    Thank you for being mine. I love you endlessly ❤️
+  </p>
+  <button id="toQuiz" class="bg-pink-500 text-white px-6 py-3 rounded-xl text-xl bounce clickable">Next ➝</button>
 </div>
 
 <!-- PAGE 4 QUIZ -->
-<div id="page4" class="hidden flex flex-col items-center text-center p-8">
-
-<h1 id="quizTitle" class="text-4xl font-bold text-pink-600 mb-6">Quiz Time 💕</h1>
-<div id="quizContainer" class="w-full max-w-xl text-center"></div>
-
+<div id="page4" class="hidden flex flex-col items-center text-center w-full max-w-md mt-8">
+  <div id="quizContainer" class="w-full text-center"></div>
 </div>
 
 <script>
-// PAGE 1
+// PAGE 1 logic
 const yesBtn=document.getElementById("yesBtn");
 const noBtn=document.getElementById("noBtn");
 const mainImage=document.getElementById("mainImage");
@@ -116,16 +92,7 @@ const page3=document.getElementById("page3");
 const page4=document.getElementById("page4");
 
 let noCount=0;
-
-const noMessages=[
-"Are you sure? 😢",
-"Please baby 🥺",
-"Think again ❤️",
-"I will cry 😭",
-"Last chance 💔",
-"Okay fine... just click Yes 😭"
-];
-
+const noMessages=["Are you sure? 😢","Please baby 🥺","Think again ❤️","I will cry 😭","Last chance 💔","Okay fine... just click Yes 😭"];
 const images=[
 "https://i.imgur.com/UPSKZF7.gif",
 "https://i.imgur.com/Ji1hORa.gif",
@@ -136,20 +103,25 @@ const images=[
 "https://i.imgur.com/egD3AlY.gif"
 ];
 
-noBtn.onclick=()=>{
+function addMobileClick(el, fn) {
+  el.addEventListener("click", fn);
+  el.addEventListener("touchstart", fn);
+}
+
+addMobileClick(noBtn, ()=>{
   if(noCount<noMessages.length){
     question.innerText=noMessages[noCount];
     mainImage.src=images[noCount+1];
     yesBtn.style.transform=`scale(${1+(noCount*0.3)})`;
     noCount++;
   }
-};
+});
 
-yesBtn.onclick=()=>{
+addMobileClick(yesBtn, ()=>{
   confetti({particleCount:200,spread:120});
   page1.classList.add("hidden");
   page2.classList.remove("hidden");
-};
+});
 
 // PAGE 2 LETTER
 const letterClosed=document.getElementById("letterClosed");
@@ -157,109 +129,66 @@ const letterOpen=document.getElementById("letterOpen");
 const loveNote=document.getElementById("loveNote");
 const afterLetter=document.getElementById("afterLetter");
 
-letterClosed.onclick=()=>{
+addMobileClick(letterClosed, ()=>{
   letterClosed.classList.add("hidden");
   letterOpen.classList.remove("hidden");
+  loveNote.classList.remove("hidden");
+  setTimeout(()=>afterLetter.classList.remove("hidden"),1400);
+});
 
-  setTimeout(()=>{
-    loveNote.style.opacity="1";
-    loveNote.style.transform="translateY(0)";
-  },400);
-
-  setTimeout(()=>{
-    afterLetter.classList.remove("hidden");
-    confetti({particleCount:200,spread:120});
-  },1400);
-};
-
-afterLetter.onclick=()=>{
+addMobileClick(afterLetter, ()=>{
   page2.classList.add("hidden");
   page3.classList.remove("hidden");
-};
+});
 
 // PAGE 3 MESSAGE
-document.getElementById("toQuiz").onclick=()=>{
+const toQuiz=document.getElementById("toQuiz");
+addMobileClick(toQuiz, ()=>{
   page3.classList.add("hidden");
   page4.classList.remove("hidden");
   startQuiz();
-};
+});
 
-// PAGE 4 QUIZ
-const quizData = [
-  {
-    question: "What was the date we first met?",
-    options: ["22 August","24 August","21 August"],
-    answer: 1
-  },
-  {
-    question: "What was the food we ate on our first date?",
-    options: ["Momos","Ramen","Ice Cream"],
-    answer: 1
-  },
-  {
-    question: "Who loves you more?",
-    options: ["Your boyfriend","Chirag","Bonu"],
-    answer: 2
-  },
-  {
-    question: "How long have we been together?",
-    options: ["1 year 3 months","2 years 4 months","1 year 5 months"],
-    answer: 2
-  },
-  {
-    question: "What could be our common favorite food?",
-    options: ["Chinese","Butter Chicken","Fish Thali"],
-    answer: 2
-  }
+// QUIZ
+const quizData=[
+  { question: "What was the date we first met?", options:["22 August","24 August","21 August"], answer:1 },
+  { question: "What was the food we ate on our first date?", options:["Momos","Ramen","Ice Cream"], answer:1 },
+  { question: "Who loves you more?", options:["Your boyfriend","Chirag","Bonu"], answer:2 },
+  { question: "How long have we been together?", options:["1 year 3 months","2 years 4 months","1 year 5 months"], answer:2 },
+  { question: "What could be our common favorite food?", options:["Chinese","Butter Chicken","Fish Thali"], answer:2 }
 ];
 
 let currentQuestion=0;
 const quizContainer=document.getElementById("quizContainer");
 
-function startQuiz() {
-  currentQuestion = 0;
-  showQuestion(currentQuestion);
-}
-
-function showQuestion(qIndex) {
-  const q = quizData[qIndex];
-  quizContainer.innerHTML = "";
-
-  const qEl = document.createElement("p");
+function startQuiz(){currentQuestion=0;showQuestion(currentQuestion);}
+function showQuestion(qIndex){
+  const q=quizData[qIndex];
+  quizContainer.innerHTML="";
+  const qEl=document.createElement("p");
   qEl.className="text-2xl font-semibold mb-6 fadeIn";
-  qEl.innerText = q.question;
+  qEl.innerText=q.question;
   quizContainer.appendChild(qEl);
 
   q.options.forEach((opt,i)=>{
-    const btn = document.createElement("button");
-    btn.className="option-btn px-4 py-2 rounded mb-2 w-full text-white text-lg";
-    btn.innerText = opt;
-    btn.style.backgroundColor = "#f472b6"; // Tailwind bg-pink-400 fallback
-    btn.onclick = () => checkAnswer(i, btn, q.answer);
+    const btn=document.createElement("button");
+    btn.className="option-btn px-4 py-2 rounded mb-2 w-full text-white text-lg clickable";
+    btn.innerText=opt;
+    btn.style.backgroundColor="#f472b6";
+    addMobileClick(btn, ()=>checkAnswer(i,btn,q.answer));
     quizContainer.appendChild(btn);
   });
 }
 
-function checkAnswer(selected, btn, correct) {
-  const buttons = document.querySelectorAll(".option-btn");
-  buttons.forEach(b => b.disabled = true);
-  
-  if(selected === correct){
-    btn.style.backgroundColor = "#22c55e"; // green-500
-    confetti({particleCount:150,spread:100});
-  } else {
-    btn.style.backgroundColor = "#ef4444"; // red-500
-    buttons[correct].style.backgroundColor = "#22c55e"; // highlight correct
-  }
-
+function checkAnswer(selected, btn, correct){
+  const buttons=document.querySelectorAll(".option-btn");
+  buttons.forEach(b=>b.disabled=true);
+  if(selected===correct){btn.style.backgroundColor="#22c55e"; confetti({particleCount:150,spread:100});}
+  else{btn.style.backgroundColor="#ef4444"; buttons[correct].style.backgroundColor="#22c55e";}
   setTimeout(()=>{
     currentQuestion++;
-    if(currentQuestion < quizData.length){
-      showQuestion(currentQuestion);
-    } else {
-      // Quiz complete, do nothing, user can add a video here
-      quizContainer.innerHTML = "<p class='text-2xl font-bold text-pink-700 fadeIn'>🎉 Add your video here 🎥</p>";
-    }
+    if(currentQuestion<quizData.length){showQuestion(currentQuestion);}
+    else{quizContainer.innerHTML=`<p class="text-2xl font-bold text-pink-700 fadeIn">🎥 Add your video here 🎥</p>`;}
   },1500);
 }
 </script>
