--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@ function checkAnswer(selected, btn, correct) {
   buttons.forEach(b => b.disabled = true);
   
   if(selected === correct){
-    btn.style.backgroundColor = "#22c55e"; // green
+    btn.style.backgroundColor = "#22c55e";
     confetti({particleCount:150,spread:100});
   } else {
-    btn.style.backgroundColor = "#ef4444"; // red
-    buttons[correct].style.backgroundColor = "#22c55e"; // highlight correct
+    btn.style.backgroundColor = "#ef4444";
+    buttons[correct].style.backgroundColor = "#22c55e";
   }
 
   setTimeout(()=>{
@@ -222,12 +222,14 @@ function checkAnswer(selected, btn, correct) {
     if(currentQuestion < quizData.length){
       showQuestion(currentQuestion);
     } else {
-      // Quiz complete → show your GitHub video
+      // Quiz complete → show button linking to Google Drive video
       quizContainer.innerHTML = `
-        <video class="w-full max-w-xl rounded-xl shadow-lg fadeIn" controls autoplay>
-          <source src="https://chavanchirag.github.io/V/lv_7533149982778576189_20260213135946.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+        <p class="text-xl mb-4 font-semibold text-pink-700">🎉 Quiz Completed! Click below to watch the video </p>
+        <a href="https://drive.google.com/file/d/1bIJrgqLQA8ie-cU7NDN0_9VFAHzpGT_J/view?usp=drivesdk" 
+           target="_blank" 
+           class="bg-pink-500 text-white px-6 py-3 rounded-xl text-xl hover:bg-pink-600 transition">
+          Watch Video on Google Drive
+        </a>
       `;
     }
   },1500);
